# test

./: CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.md  README.md
.github/: funding.yml
.github/workflows/: ci.yml
.spell/: words.txt
cmake/: CompilerWarnings.cmake  Config.cmake.in  Doxyfile.cmake.in  Doxygen.cmake  GitDeps.cmake  Install.cmake  Sandbox.cmake  Test.cmake  pkg-config.pc.in
docs/: cmake-and-ctest.md  hooks-and-state.md  running-and-filtering.md  skipping-tests.md  writing-tests.md
include/kaycxx/: test.hpp
include/kaycxx/test/: after_all.hpp  after_each.hpp  before_all.hpp  before_each.hpp  callback.hpp  describe.hpp  failure.hpp  hook.hpp  it.hpp  reporter.hpp  run_options.hpp  run_tests.hpp  skip.hpp  skipped.hpp  suite.hpp  test_filter.hpp  test_registry.hpp
src/: after_all.cpp  after_each.cpp  before_all.cpp  before_each.cpp  describe.cpp  failure.cpp  it.cpp  main.cpp  reporter.cpp  run_tests.cpp  skip.cpp  skipped.cpp  test_registry.cpp
src/detail/: default_reporter.cpp  default_reporter.hpp  hook.cpp  hook_error.cpp  hook_error.hpp  test_case.cpp  test_case.hpp  test_matcher.cpp  test_matcher.hpp  test_node.cpp  test_node.hpp  test_suite.cpp  test_suite.hpp
test/: after_all.test.cpp  after_each.test.cpp  before_all.test.cpp  before_each.test.cpp  describe.test.cpp  failure.test.cpp  hook.test.cpp  it.test.cpp  run_tests.test.cpp  skip.test.cpp  skipped.test.cpp  suite.test.cpp  test_registry.test.cpp
test/support/: active_registry.cpp  active_registry.hpp  recording_reporter.cpp  recording_reporter.hpp  test_registration.cpp  test_registration.hpp
